style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: linear-gradient(
        to bottom,
        rgb(255, 255, 255),
        rgb(221, 233, 250)
    );
    min-height: 100vh;
    font-family: "Montserrat", sans-serif;
}

h1 {
    text-align: center;
    margin: 25px auto;
    font-size: 2rem;
}

h2 {
    margin: 20px 0;
    position: relative;
    font-weight: 500;
    word-spacing: 5px;
}

h2::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    margin-bottom: -5px;
    width: 50%;
    height: 3px;
    background-color: rgba(0, 0, 0, 0.5);
}

img {
    max-width: 100%;
    object-fit: cover;
}

a {
    color: #000;
    text-decoration: none;
}

a:hover {
    color: rgb(252, 130, 49);
}

main {
    width: 80%;
    max-width: 100%;
    margin: 40px auto;
}

.box-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.box {
    width: 280px;
    height: 270px;
    margin: 20px;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    transition: box-shadow 0.5s ease;
}

.box:hover {
    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.3);
}

.box > div {
    flex: 1;
}

.info {
    padding: 10px;
    display: flex;
    flex-direction: column;
    background-color: #fff;
    position: relative;
}

.img-wrapper {
    height: 140px;
    overflow: hidden;
    position: relative;
}

.title {
    font-size: 1.2em;
    font-weight: 500;
    margin: 10px auto;
    text-align: center;
}

.code,
.live {
    position: absolute;
    bottom: 15px;
    transform: translateY(calc(15px / 2));
    left: 15px;
    font-weight: 400;
    font-size: 24px;
}

.live {
    margin-left: 10px;
    left: calc(15px + 24px);
}

.level {
    position: absolute;
    bottom: 15px;
    right: 15px;
    text-align: right;
}

.attribution {
    margin: 15px auto;
    text-align: center;
}

.attribution a {
    text-decoration: underline;
}

@media screen and (max-width: 850px) {
    img {
        object-fit: contain;
    }
    .box {
        min-width: 200px;
        width: 60%;
        margin: 20px auto;
    }
    .title {
        font-size: 1.1;
    }
}

